<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/group_timer_layout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Main_View">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_time_display">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeVal"
                android:id="@+id/overallTimer"
                android:layout_weight=".6"
                android:textSize="@dimen/main_time_font_size"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milliVal"
                android:id="@+id/overallMilli"
                android:layout_weight=".3"
                android:textSize="@dimen/millisec_font" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/timer_list"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:id="@+id/start_button"
            android:textSize="20dp"
            android:textColor="#000000"
            android:minHeight="50dp" />
    </LinearLayout>


</RelativeLayout>